增加转盘显示功能

--- a/public/wheel.html
+++ b/public/wheel.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>🐻🐻🐻🐻</h1>
+        <h1>🐻点餐🐻</h1>
         <button id="menu-toggle" class="mobile-only">☰</button>
         <nav id="main-nav">
             <ul>
@@ -30,6 +30,7 @@
                     <canvas id="wheel" width="400" height="400"></canvas>
                     <button id="spin-button">转动</button>
                 </div>
+                <p id="wsc-p">已选中:(下单移步购物车) </p>
                 <p id="selected-dish"></p>
             </section>
         </main>
