--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                 <li><a href="cart.html">购物车</a></li>
                 <li><a href="orders.html">全部订单</a></li>
                 <li><a href="wheel.html">转盘</a></li>
-
+                <li><button id="logout-button">退出登录</button></li>
             </ul>
         </nav>
     </header>
