--- a/public/wheel.html
+++ b/public/wheel.html
@@ -19,6 +19,8 @@
                 <li><a href="cart.html">购物车</a></li>
                 <li><a href="orders.html">全部订单</a></li>
                 <li><a href="wheel.html">转盘</a></li>
+                <li><button id="logout-button">退出登录</button></li> <!-- 退出登录按钮 -->
+
             </ul>
         </nav>
     </header>
