完善登录功能

--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
     <title>登录</title>
 </head>
 
-<body>
+<body class="login-page">
     <div class="login-container">
         <h1>欢迎回来</h1>
         <form id="login-form">
