--- a/public/wheel.html
+++ b/public/wheel.html
@@ -32,7 +32,7 @@
                     <canvas id="wheel" width="400" height="400"></canvas>
                     <button id="spin-button">转动</button>
                 </div>
-                <p id="wsc-p">已选中:(下单移步购物车) </p>
+                <p id="wsc-p">已选中(下单请移步购物车) :</p>
                 <p id="selected-dish"></p>
             </section>
         </main>
