新增上架通知功能

--- a/public/admin.html
+++ b/public/admin.html
@@ -138,6 +138,12 @@
                     <input type="file" id="dish-image" accept="image/*">
                     <img id="dish-image-preview" style="display: none; max-width: 200px; margin-top: 10px;">
                 </div>
+                <div class="form-group">
+                    <label class="checkbox-label">
+                        <input type="checkbox" id="dish-show-popup">
+                        发布新品提醒
+                    </label>
+                </div>
                 <div class="form-actions">
                     <button type="submit" class="btn btn-primary">保存</button>
                     <button type="button" class="btn" onclick="hideDishForm()">取消</button>
