--- a/public/cart.html
+++ b/public/cart.html
@@ -19,9 +19,10 @@
                 <li><a href="cart.html">购物车</a></li>
                 <li><a href="orders.html">全部订单</a></li>
                 <li><a href="wheel.html">转盘</a></li>
-                <li><button id="logout-button">退出登录</button></li> <!-- 退出登录按钮 -->
-
-
+                <li class="user-info">
+                    <span id="current-user">未登录</span>
+                </li>
+                <li><button id="logout-button">退出登录</button></li>
             </ul>
         </nav>
     </header>
