--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
                 <li><a href="cart.html">购物车</a></li>
                 <li><a href="orders.html">全部订单</a></li>
                 <li><a href="wheel.html">转盘</a></li>
+                <li class="user-info">
+                    <span id="current-user">未登录</span>
+                </li>
                 <li><button id="logout-button">退出登录</button></li>
             </ul>
         </nav>
@@ -32,6 +35,20 @@
             <div id="pagination"></div>
         </main>
     </div>
+
+    <!-- 新品提醒弹窗 -->
+    <div id="new-dish-modal" class="notification-modal">
+        <div class="notification-content">
+            <div class="notification-header">
+                <h3>新品上架</h3>
+                <button class="notification-close-btn" onclick="closeNewDishModal()">&times;</button>
+            </div>
+            <div id="new-dish-content" class="modal-body">
+                <!-- 新品内容将通过JavaScript动态插入 -->
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
