feat: 添加商品搜索功能和样式优化 - 新增搜索框和搜索按钮 - 实现实时搜索和按钮搜索 - 添加后端搜索API - 调整菜单标题位置和样式 - 优化搜索框布局 - 分离新品提示框样式

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
     <div class="content-wrapper">
         <main>
             <section id="menu">
+                <div class="search-container">
+                    <input type="text" id="search-input" placeholder="搜索菜品...">
+                    <button id="search-button">搜索</button>
+                </div>
                 <h2>菜单</h2>
                 <div id="menu-items"></div>
             </section>
