完善管理端提交时选择分类功能

--- a/public/admin.html
+++ b/public/admin.html
@@ -134,6 +134,12 @@
                     <input type="number" id="dish-price" step="0.01" required>
                 </div>
                 <div class="form-group">
+                    <label for="dish-category">分类</label>
+                    <select id="dish-category" required>
+                        <option value="">请选择分类</option>
+                    </select>
+                </div>
+                <div class="form-group">
                     <label for="dish-image">图片</label>
                     <input type="file" id="dish-image" accept="image/*">
                     <img id="dish-image-preview" style="display: none; max-width: 200px; margin-top: 10px;">
